# boilerplate-chatbot-streamlit-auth-stripe

./: .gitignore  Dockerfile.app  LICENSE  README.md  config.env  pyproject.toml  taskfile.sh
.streamlit/: secrets.toml
src/: streamlit_app.py
src/authentication_paywall/: __init__.py  aggregate_auth.py  allowed_users.txt  common.py  google_auth.py  stripe_auth.py  utils_auth.py
